# Jornada-IA-Gobierno

./: .gitignore  App  README.md  prototype_dashboard.html  setup.bat  setup.sh
.kiro/hooks/: auto-lint.kiro.hook  block-env-files.kiro.hook  pre-commit-secret-scan.kiro.hook  run-unit-tests-on-save.kiro.hook
.kiro/specs/: caso1-sube.md  caso3-salud.md
.kiro/specs/dashboard-poblacional-argentina/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: aws-architecture.md  coding-standards.md  infrastructure.md  project.md  security.md  testing.md
casos/: README.md  casos de ejemplo.md
dashboard-poblacional/: README.md  dashboard.html  generate_dashboard.py  pyproject.toml  requirements.txt
dashboard-poblacional/data/: censos.csv  comunas_caba.csv  partidos_bsas.csv
dashboard-poblacional/tests/: conftest.py
datasets/: README.md
documentacion/: Tips4Kiro.md  instalar-kiro.md
documentacion/mcp-bcra/: README.md  api-reference.md  arquitectura.md  instalacion.md  uso.md
documentacion/mcp-datos-abiertos-arg/: README.md  api-reference.md  arquitectura.md  desarrollo.md  instalacion.md  uso.md
mcp-bcra/: .gitignore  LICENSE  README.md  main.py  pyproject.toml
mcp-datos-abiertos-arg/: .gitignore  CONTRIBUTING.md  README.md  build_index.py  index.json  main.py  manifest.json  pyproject.toml
mcp-datos-abiertos-arg/tests/: test_index.py
sicyt/: Catalogo Datos Abiertos.csv  Catalogo Datos Abiertos.xlsx  Ejercicio Kiro.md  Ejercicios Kiro.docx  README.md
