[project]
name = "dashboard-poblacional"
version = "0.1.0"
description = "Dashboard interactivo de proyecciones poblacionales de Argentina (2028-2035)"
requires-python = ">=3.11"
dependencies = [
    "plotly==5.24.1",
    "pandas==2.2.3",
    "scipy==1.14.1",
    "numpy==2.1.3",
    "python-dotenv==1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "hypothesis==6.119.3",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
