[project]
name = "mcp-bcra"
version = "0.1.0"
description = "Servidor MCP para la API pública del Banco Central de la República Argentina (BCRA)"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Jornada de IA para Gobierno - Dirección Nacional de Datos e Información Pública" }]
requires-python = ">=3.10"
keywords = ["mcp", "model-context-protocol", "argentina", "bcra", "banco-central", "economia"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Natural Language :: Spanish",
]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/Eduvilascoder/Jornada-IA-Gobierno"
Issues = "https://github.com/Eduvilascoder/Jornada-IA-Gobierno/issues"

[project.scripts]
mcp-bcra = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["main.py"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
